<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>OptionPageWorkspace</class>
 <widget class="QWidget" name="OptionPageWorkspace">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>615</width>
    <height>423</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <widget class="QLabel" name="projectManagerLabel">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>10</y>
     <width>591</width>
     <height>31</height>
    </rect>
   </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <property name="font">
    <font>
     <pointsize>13</pointsize>
     <bold>true</bold>
    </font>
   </property>
   <property name="text">
    <string>List of Setup Workspaces</string>
   </property>
  </widget>
  <widget class="QWidget" name="layoutWidget">
   <property name="geometry">
    <rect>
     <x>170</x>
     <y>50</y>
     <width>431</width>
     <height>331</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <property name="horizontalSpacing">
     <number>0</number>
    </property>
    <item row="0" column="0" colspan="2">
     <widget class="QLabel" name="rootDirLabel">
      <property name="text">
       <string>Root Directory</string>
      </property>
     </widget>
    </item>
    <item row="3" column="0" colspan="2">
     <widget class="QLabel" name="includeDirLabel">
      <property name="text">
       <string>Include Directory:</string>
      </property>
     </widget>
    </item>
    <item row="4" column="2">
     <widget class="QLineEdit" name="deliveryDirEdit">
      <property name="toolTip">
       <string>The thirdparty delivery directory path of the selected workspace</string>
      </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
      <property name="placeholderText">
       <string>The thirdparty delivery directory path is empty</string>
      </property>
     </widget>
    </item>
    <item row="5" column="0" colspan="2">
     <widget class="QLabel" name="logDirLabel">
      <property name="text">
       <string>Log Directory:</string>
      </property>
     </widget>
    </item>
    <item row="1" column="2">
     <widget class="QCheckBox" name="checkDefault">
      <property name="enabled">
       <bool>true</bool>
      </property>
      <property name="toolTip">
       <string>Set currently active workspace as defalt</string>
      </property>
      <property name="text">
       <string/>
      </property>
     </widget>
    </item>
    <item row="6" column="2" colspan="2">
     <widget class="QPlainTextEdit" name="workspaceEdit">
      <property name="placeholderText">
       <string>Add workspace description here</string>
      </property>
     </widget>
    </item>
    <item row="0" column="2">
     <widget class="QLineEdit" name="rootDirEdit">
      <property name="toolTip">
       <string>Root directory of the selected workspace</string>
      </property>
      <property name="whatsThis">
       <string>The root directory of the workspace</string>
      </property>
      <property name="layoutDirection">
       <enum>Qt::LayoutDirection::LeftToRight</enum>
      </property>
      <property name="alignment">
       <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignVCenter</set>
      </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
     </widget>
    </item>
    <item row="1" column="0" colspan="2">
     <widget class="QLabel" name="rootDirLabel_2">
      <property name="text">
       <string>Is default workspace?</string>
      </property>
     </widget>
    </item>
    <item row="5" column="2">
     <widget class="QLineEdit" name="logDirEdit">
      <property name="toolTip">
       <string>The log files directory path of the selected workspace</string>
      </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
      <property name="placeholderText">
       <string>The logs directory path is empty</string>
      </property>
     </widget>
    </item>
    <item row="6" column="0" colspan="2">
     <widget class="QLabel" name="workspaceDescriptionLabel">
      <property name="text">
       <string>Workspace Description:</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignTop</set>
      </property>
     </widget>
    </item>
    <item row="2" column="0" colspan="2">
     <widget class="QLabel" name="sourceDirLabel">
      <property name="text">
       <string>Source Directory:</string>
      </property>
     </widget>
    </item>
    <item row="3" column="2">
     <widget class="QLineEdit" name="includeDirEdit">
      <property name="toolTip">
       <string>The include files directory path of the selected workspace</string>
      </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
      <property name="placeholderText">
       <string>The include directory path is empty</string>
      </property>
     </widget>
    </item>
    <item row="4" column="0" colspan="2">
     <widget class="QLabel" name="deliveryDirLabel">
      <property name="text">
       <string>Delivery Directory:</string>
      </property>
     </widget>
    </item>
    <item row="2" column="2">
     <widget class="QLineEdit" name="sourceDirEdit">
      <property name="toolTip">
       <string>The source codes directory path of the selected workspace</string>
      </property>
      <property name="layoutDirection">
       <enum>Qt::LayoutDirection::LeftToRight</enum>
      </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
      <property name="placeholderText">
       <string>The source codes directory path is empty</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QListWidget" name="listOfWorkspaces">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>50</y>
     <width>151</width>
     <height>331</height>
    </rect>
   </property>
   <property name="toolTip">
    <string>List of workspaces</string>
   </property>
   <property name="editTriggers">
    <set>QAbstractItemView::EditTrigger::NoEditTriggers</set>
   </property>
   <property name="iconSize">
    <size>
     <width>16</width>
     <height>16</height>
    </size>
   </property>
  </widget>
  <widget class="QPushButton" name="deleteButton">
   <property name="geometry">
    <rect>
     <x>520</x>
     <y>390</y>
     <width>80</width>
     <height>25</height>
    </rect>
   </property>
   <property name="toolTip">
    <string>Delete currently selected not active workspace settings.</string>
   </property>
   <property name="text">
    <string>Delete</string>
   </property>
  </widget>
 </widget>
 <tabstops>
  <tabstop>rootDirEdit</tabstop>
  <tabstop>sourceDirEdit</tabstop>
  <tabstop>includeDirEdit</tabstop>
  <tabstop>deliveryDirEdit</tabstop>
  <tabstop>logDirEdit</tabstop>
  <tabstop>workspaceEdit</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
